--- a/style.css
+++ b/style.css
@@ -134,7 +134,6 @@ img{
     padding-bottom: 2%;
     z-index: var(--z-fixed);
     background-color: var(--body-color);
-    box-shadow: 0 -1px 4px rgba(0,0,0,0.15);
 }
 .nav{
     max-width: 968px;
@@ -174,6 +173,9 @@ img{
         border-radius: 1.5rem 1.5rem 0;
         transition: .3s;
     }
+    .header{
+        box-shadow: 0 -1px 4px rgba(0,0,0,0.15);
+    }
 }
 .nav_list{
     grid-template-columns: repeat(3, 1fr);
@@ -206,4 +208,80 @@ img{
 }
 .show-menu{
     bottom: 0;
+}
+
+
+
+
+.home_container{
+    gap: 1rem;
+}
+.home_content{
+    grid-template-columns: .5fr 3fr;
+    padding-top: 3.5rem;
+    align-items: center;
+}
+.home_social{
+    display: grid;
+    grid-template-columns: max-content;
+    row-gap: 1rem;
+}
+.home_social-icon{
+    font-size: 1.25rem;
+    color: var(--first-color);
+}
+.home_social-icon:hover{
+    color: var(--first-color-alt);
+}
+
+
+
+.home_img{
+    background-color: var(--first-color);
+    width: 110%;
+    height: 300%;
+    position: relative;
+    top: 55%;
+    left: -12%;
+}
+.home_data{
+    position: relative;
+    top: 100%;
+    grid-column: 1/3;
+}
+.home_title{
+    font-size: var(--big-font-size);
+}
+.home_subtitle{
+    font-size: var(--h3-font-size);
+    color: var(--text-color);
+    font-weight: var(--font-medium);
+    margin-bottom: var(--mb-0-75);
+}
+.home_description{
+    margin-bottom: var(--mb-2);
+}
+.home_scroll{
+    /* display: none; */
+    position: relative;
+    top: 365%;
+}
+.home_scroll-button{
+    color: var(--first-color);
+    transform: .3s;
+}
+.home_scroll-button:hover{
+    transform: translateY(.25rem);
+}
+.home_scroll-mouse{
+    font-size: 2rem;
+}
+.home_scroll-name{
+    font-size: var(--small-font-size);
+    color: var(--title-color);
+    font-weight: var(--font-medium);
+    margin-right: var(--mb-0-25);
+}
+.home_scroll-arrow{
+    font-size: 1.25rem;
 }
