--- a/style.css
+++ b/style.css
@@ -245,6 +245,9 @@ img{
     position: relative;
     top: 55%;
     left: -12%;
+    background-image: url(https://gta5modsindia.com/wp-content/uploads/2021/07/gta-v-john-don-mod-free.jpg);
+    background-size: cover;
+    border: 1px solid grey;
 }
 .home_data{
     position: relative;
